Add ability to save an image as a ByteArray to a file in ImageUtils.kt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.PlaceBook"
         tools:targetApi="31">
 
-        <!--API Key-->
+        <!--API Key: found in local.properties-->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
